# mineclonecraft

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  buildAndRun.sh  calc.hpp  compile.sh  compileShaders.sh  fileHandler.cpp  main.cpp  terrainGeneration.cpp  terrainGeneration.hpp  test.sh  tmp
include/: block.hpp  calc.hpp  chunk.hpp  config.hpp  fileHandler.hpp  player.hpp  renderer.hpp  terrain.hpp  terrainGeneration.hpp  vertex.hpp
shaders/: black.frag  flat.frag  frag.spv  normal.frag  normal.vert  shader.vert  vert.spv
src/: block.cpp  calc.cpp  chunk.cpp  fileHandler.cpp  player.cpp  renderer.cpp  terrain.cpp  terrainGeneration.cpp
