CMAKE_MINIMUM_REQUIRED(VERSION 4.2.3)
PROJECT(MineCloneCraft)

SET(CMAKE_CXX_STANDARD 26)
SET(CMAKE_CXX_STANDARD_REQUIRED true)

FIND_PACKAGE(SDL3 REQUIRED)

ADD_EXECUTABLE(${PROJECT_NAME} main.cpp)

TARGET_LINK_LIBRARIES(${PROJECT_NAME} PRIVATE SDL3::SDL3)
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE ${SDL3_INCLUDE_DIRS})

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/build)
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/build)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/build)
