CMAKE_MINIMUM_REQUIRED(VERSION 4.2.3)
PROJECT(MineCloneCraft)

SET(CMAKE_CXX_STANDARD 26)
SET(CMAKE_CXX_STANDARD_REQUIRED true)

FIND_PACKAGE(SDL3 REQUIRED)

FILE(GLOB SRCS src/*.cpp)

ADD_EXECUTABLE(${PROJECT_NAME}
  main.cpp
  ${SRCS}
)

TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE
  include
  ${SDL3_INCLUDE_DIRS}
)

TARGET_LINK_LIBRARIES(${PROJECT_NAME} PRIVATE
  SDL3::SDL3
  stdc++exp
)

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/build)
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/build)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/build)
